@@ -1507,6 +1507,16 @@ def get_mime(path, url=None):
         # because the FeedRendered fallback to HtmlRenderer
         if mime2 and mime != mime2 and "html" in mime and "xml" in mime2:
             mime = "text/xml"
+        # We will also check if the first line starts with <rss
+        elif not mime2 and "html" in mime:
+            firstline = None
+            with open(path) as f:
+                firstline = f.readline()
+                f.close()
+            if firstline.startswith("<rss"):
+                mime = "text/xml"
+            else:
+                mime = "text/html"
         # If it’s a xml file, consider it as such, regardless of what file thinks
         elif path.endswith(".xml"):
             mime = "text/xml"
