@@ -8,6 +8,7 @@
 - blocklist: marked x.com, twitter.com and youtube.com as blocked to save bandwith until we have a viable option to use them with offpunk.
 - offpunk: be more explicit about how to unblock a blocked URL
 - offpunk: improved "version" to help debugging on the mailing-list
+- ansicat: if a file identified as html starts with "<rss ", then it is a XML, not HTML
 
 ## 2.6 - February 24th 2025
 FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
